fix: resolve conflito de versão do SpringDoc e configura acesso público do Swagger ignorando filtros JWT